2014-04-02  Pierre Langlois  <pierre.langlois@embecosm.com>

	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* configure.ac: Add gcc_plugin.tests/Makefile and config/site.exp to
	AC_OUTPUT.
	* testsuite/Makefile.am: Set config/site.exp as a configuration file.
	Add gcc_plugin as a second tool to seperate gcc specific test from
	mageec tests.
	* testsuite/Makefile.in: Regenerate.
	* testsuite/config/site.exp.in: New file. Configuration to pass to the
	tests.
	* testsuite/gcc_plugin.tests/Makefile.am: New file.
	* testsuite/gcc_plugin.tests/Makefile.in: New file, generate.
	* testsuite/gcc_plugin.tests/feature-extract.exp: New test file. Checks
	that features are extracted from compiling an empty source file.
	* testsuite/gcc_plugin.tests/main.c: New empty source file.

2014-04-02  James Pallister  <james.pallister@bristol.ac.uk>
	Added auxiliary m4 files for boost and python detections

	* m4/ax_boost_base.m4: Detection script for boost
	* m4/ax_boost_python.m4: Detection script for boost python
	* m4/ax_python_devel.m4: Detection script for python

2014-04-02  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/feature-extract.cpp (mageec_featextract_exec):
	Correctly store number of statements instead of block count as
	instruction count features.

2014-03-29  James Pallister  <james.pallister@bristol.ac.uk>
	Added support for using the library as a python module

	* Makefile.in: Regenerated
	* aclocal.m4: Regenerated
	* configure: Regenerated
	* configure.ac: Add the --enable-python options, and check for python
	    development headers and boost python
	* doc/Makefile.in: Regenerated
	* gcc_plugin/Makefile.in: Regenerated
	* include/Makefile.in: Regenerated
	* mageec/Makefile.am: Conditionally compile in python.cpp if
	    --enable-python is given to configure. Add install hooks to
	    symlink the library into python dist- packages, so python scripts
	    can use it
	* mageec/Makefile.in: Regenerated