@@ -3,7 +3,7 @@
 
 AC_PREREQ([2.69])
 AC_INIT([mageec], [0.1.0])
-AM_INIT_AUTOMAKE()
+AM_INIT_AUTOMAKE([subdir-objects])
 AC_CONFIG_MACRO_DIR([m4])
 
 AC_CONFIG_SRCDIR([mageec/mageec.cpp])
